force-app/main/default/objects/Customer_Inbound__e/Customer_Inbound__e.object-meta.xml
<CustomObject>
    <label>Customer Inbound</label>
    <pluralLabel>Customer Inbounds</pluralLabel>
</CustomObject>