force-app/main/default/objects/Customer_Inbound__e/fields/Agent_Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Extension_Number__c</fullName>
    <label>Agent Extension Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>