force-app/main/default/objects/Customer_Inbound__e/fields/Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Number__c</fullName>
    <label>Call Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>