force-app/main/default/objects/Customer_Inbound__e/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>