force-app/main/default/objects/Customer_Inbound__e/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>