force-app/main/default/objects/Customer_Inbound__e/fields/Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Reason__c</fullName>
    <label>Fail Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>