force-app/main/default/objects/Customer_Inbound__e/fields/TMB_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Cust_ID__c</fullName>
    <label>TMB Cust ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>