force-app/main/default/objects/Customer_Inbound__e/fields/Verification_Action__c.field-meta.xml
<CustomField>
    <fullName>Verification_Action__c</fullName>
    <label>Verification Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>