force-app/main/default/objects/Customer_Inbound__e/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <label>Verification Date</label>
    <type>DateTime</type>
</CustomField>