force-app/main/default/objects/Customer_Inbound__e/fields/Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>Verification_Result__c</fullName>
    <label>Verification Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>