force-app/main/default/objects/Customer_Inbound__e/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>