force-app/main/default/objects/Customer_Inbound__e/fields/Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Verification_Type__c</fullName>
    <label>Verification Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>