force-app/main/default/objects/Customer_Inbound__e/fields/Xfer__c.field-meta.xml
<CustomField>
    <fullName>Xfer__c</fullName>
    <label>Xfer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>